# BareSDK

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  demo.c  pyproject.toml
.github/workflows/: cmake.yml
core/include/: bsdk_crc32.h  bsdk_hashmap.h  bsdk_wireutils.h
core/src/: bsdk_codes.c  bsdk_crc32.c  bsdk_fnv.c  bsdk_hashmap.c  bsdk_math.c  bsdk_memutils.c  bsdk_ringbuffer.c  bsdk_stack.c
hash_tests/: hash_test.py
include/: bsdk_codes.h  bsdk_common.h  bsdk_crc32.h  bsdk_data_structures.h  bsdk_fnv.h  bsdk_hashes.h  bsdk_hashmap.h  bsdk_linked_list.h  bsdk_math.h  bsdk_memutils.h  bsdk_queue.h  bsdk_ringbuffer.h  bsdk_runtime.h  bsdk_stack.h  bsdk_util.h  bsdk_wireutils.h  crc32.h  endianess.h  endianness_helpers.h  fnv.h  hashmap.h  kkc_codes.h  qeue.h  ringbuff.h  ringbuffer.h  stack.h  util.h  wireutils.h
source/: bsdk_crc32.c  bsdk_fnv.c  bsdk_hashes.c  bsdk_hashmap.c  bsdk_math.c  bsdk_memutils.c  bsdk_queue.c  bsdk_ringbuffer.c  bsdk_stack.c
src/: bsdk_codes.c  bsdk_crc32.c  bsdk_fnv.c  bsdk_hashmap.c  bsdk_memutils.c  bsdk_queue.c  bsdk_ringbuffer.c  bsdk_stack.c  bsdk_util.c  crc32.c  endianess.c  endianness_helpers.c  fnv.c  hashmap.c  kkc_codes.c  qeue.c  queue.c  ringbuff.c  ringbuffer.c  stack.c  util.c  util.h  wireutils.c
